# AURORA

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
apps/web/: .eslintrc.json  README.md  next.config.js  package.json  tailwind.config.js
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/history/: page.tsx
apps/web/src/app/session/[id]/: page.tsx
apps/web/src/components/: DecisionBrief.tsx  DecisionForm.tsx  HistoryList.tsx
apps/web/src/lib/: api.ts  types.ts  utils.ts
apps/web/src/styles/: globals.css
apps/web/tests/e2e/: decision-flow.spec.ts
docs/: ARCHITECTURE.md  POSTGRES-TROUBLESHOOTING.md
infra/docker/: Dockerfile.api  Dockerfile.postgres  Dockerfile.web  Dockerfile.web.dev  docker-compose.yml
infra/docker/postgres/: docker-entrypoint-wrapper.sh  init-db.sh  init.sql
scripts/: fix-postgres-credentials.sh  setup-env.sh
services/api/: .pre-commit-config.yaml  README.md  alembic.ini  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial_schema.py
services/api/src/: __init__.py  main.py
services/api/src/agents/: __init__.py  base.py  calmness.py  context.py  intake.py  options.py  safety.py
services/api/src/api/: __init__.py  middleware.py
services/api/src/api/v1/: __init__.py  decision.py  health.py
services/api/src/core/: __init__.py  config.py  errors.py  logging.py
services/api/src/db/: __init__.py  base.py  models.py  session.py  vector_store.py
services/api/src/orchestrator/: __init__.py  graph.py  state.py
services/api/src/schemas/: __init__.py  agents.py  decision.py
services/api/src/services/: __init__.py  decision_service.py  openai_client.py
services/api/tests/: __init__.py  conftest.py
services/api/tests/integration/: test_api.py
services/api/tests/unit/: test_agents.py  test_orchestrator.py
